2002-06-14  Ray Tomlinson  <RTomlinson@bbn.com>

	* org/cougaar/core/adaptivity/PlaybookManager.java:
	Bug #1461
	Check for presence of playbook file name and complain if it is
	missing. Don't let the NPE or NoSuchElementException happen.

2002-06-13  Michael Thome  <mthome@bbn.com>

	* TimeServiceProvider, NaturalTimeService, RealTimeService,
	TimeServiceBase, SimpleAgent, NodeAgent
	Start of refactoring the Timer/Alarm facilities.  Moves hookup to
	NodeAgent, with a root service available to Agents.  Abstracts the
	interface from the actual Timers. Also removes alarms when agent
	is unloaded, fixing bug 989, bug 1486.
	
	* Heartbeat, SimpleAgent, NodeAgent
	Refactored the Heartbeat functionality into a new class connected
	to NodeAgent rather than a static in SimpleAgent.

2002-06-12  Michael Thome  <mthome@bbn.com>

	* Distributor, Subscriber, InitializeSubscriptionEnvelope, Subscription
	Fix ancient bug where initial fill of a subscription could be
	transactionally out of sync with the subscriber. Fixes bug 1381.
	Also updated a bunch of printlns to use Logging.

2002-06-06  Todd Wright <twright@bbn.com>

	* AgentBinder, AgentManager, agent subclasses
        Fixed bug 1423, "Agent binder denies binder wrappers .."
        Made AgentBinder an interface, and moved implementation 
        into new DefaultAgentBinder class.  Renamed 
        AgentBinderFactory to DefaultAgentBinderFactory, and 
        fixed clients of this factory to use the new name.  
        Modified AgentBinder clients to use the new 
        "getAgentIdentifier()" method instead of "getAgent()"
        where possible.

2002-06-06  Noelle Givler  <ngivler@bbn.com>
	
	* org/cougaar/planning/ldm/lps/AssetTransferLP
	* org/cougaar/planning/ldm/lps/ReceiveAssetVerificationLP
	* org/cougaar/planning/ldm/lps/RescindLP	
	Update transferring assets availability schedule to reflect the
	start/end and 'owning' asset. Bug 877
	
2002-06-05  Michael Thome  <mthome@bbn.com>
